--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,14 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^2.0.1",
     "@emotion/react": "^11.10.5",
+    "@emotion/server": "^11.10.0",
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.11.0",
-    "@mui/material": "^5.11.0",
+    "@mui/material": "^5.11.1",
     "@next/font": "13.0.7",
     "@types/node": "18.11.15",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
+    "@typescript-eslint/eslint-plugin": "^5.47.1",
     "next": "13.0.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -24,6 +27,8 @@
   },
   "devDependencies": {
     "eslint": "8.29.0",
-    "eslint-config-next": "13.0.7"
+    "eslint-config-next": "13.0.7",
+    "eslint-config-prettier": "^8.5.0",
+    "prettier": "^2.8.1"
   }
 }
